--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,2 +1,112 @@
 @import "config";
 @import "plugin";
+
+body {
+  font-family: $main-font;
+}
+
+.hide-for-mobile {
+  display: none;
+  @include media-breakpoint-up(md) {
+    display: block;
+  }
+}
+.hide-for-desktop {
+  display: block;
+  @include media-breakpoint-up(md) {
+    display: none;
+  }
+}
+.font-highlight {
+  &-blue {
+    color: $blue-400;
+  }
+  &-orange {
+    color: $orange-500;
+  }
+}
+
+.header {
+  &__logo-image {
+    object-fit: cover;
+    height: 30px;
+  }
+  &__menu {
+    list-style: none;
+  }
+  &__menu-item {
+    display: block;
+    text-decoration: none;
+    color: $dark;
+    font-weight: $font-weight-bolder;
+    @include media-breakpoint-up(md) {
+      display: inline-block;
+    }
+  }
+  &__navigation {
+    flex-direction: column;
+    text-align: center;
+    @include media-breakpoint-up(md) {
+      flex-direction: row;
+      text-align: start;
+    }
+  }
+}
+
+.hero {
+  background-color: #f0e5e9;
+  overflow-x: hidden;
+  &__wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    position: relative;
+    height: 600px;
+  }
+  &__text {
+    width: 35%;
+    margin-bottom: 5rem;
+  }
+  &__subheading {
+    color: $orange-500;
+    font-size: 1.25rem;
+    font-weight: 500;
+  }
+  &__heading {
+    font-size: calc($h1-font-size + 0.2125rem);
+    font-weight: 700;
+  }
+  &__description {
+    font-size: $font-size-base;
+    font-weight: 400;
+  }
+  &__call-to-action {
+    padding: 18px 36px;
+    background-image: linear-gradient(
+      330deg,
+      $blue-400,
+      darken($color: $blue-400, $amount: 30)
+    );
+    color: $white;
+    border: 0;
+    border-radius: 2.5px;
+    font-size: $font-size-lg;
+    font-weight: 500;
+    transition: box-shadow 0.5s ease;
+    &:hover {
+      opacity: 1;
+      box-shadow: 0 0 20px darken($blue-400, 10);
+    }
+  }
+
+  &__image {
+    position: absolute;
+    top: 50%;
+    left: 70%;
+    bottom: 0;
+    transform: translate(-30%, -50%);
+    background-size: cover;
+    width: 51%;
+    height: 600px;
+  }
+}
